<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">英雄联盟助手</string>
    <string name="action_settings">Settings</string>
    <string name="heroes_type">英雄类型</string>
    <string name="seat">位置</string>
    <string name="rank">排序</string>
    <string name="heroes_list_error">在此位置上无此类英雄。</string>
    <string name="attack">物理攻击</string>
    <string name="magic">魔法攻击</string>
    <string name="defense">防御能力</string>
    <string name="difficulty">操作难度</string>

</resources>
